Rediseño basico de vistas registrarse e iniciar sesion y creacion de archivo de estilos de css con su etiqueta link en auth

--- a/views/layouts/auth.hbs
+++ b/views/layouts/auth.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -13,6 +13,8 @@
     rel="stylesheet">
   {{!-- Íconos desde Fontawesome --}}
   <script src="https://kit.fontawesome.com/d7bc68b35c.js" crossorigin="anonymous"></script>
+
+  <link href="/css/styles.css" rel="stylesheet">
 
   <title>Bienvenido a Cashize</title>
 </head>
