--- a/views/iniciarSesion.hbs
+++ b/views/iniciarSesion.hbs
@@ -1,16 +1,9 @@
-{{!-- Barra de navegación --}}
-<nav class="navbar">
-
-</nav>
-
-{{!-- Formulario de registro --}}
+{{!-- Formulario de Inicio de Sesion --}}
 
 <div class="container text-center d-flex justify-content-center">
-    <form method="post" action="/registrarse" class="form form-signin align-middle">
+    <form method="post" action="/iniciar-sesion" class="form form-signin align-middle">
       <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> {{!-- cambiar URL del logo en src --}}
-      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-      <label for="nombre" class="sr-only">Nombre Completo</label>
-      <input type="text" id="inputNombre" name="nombre" class="form-control" placeholder="Nombre Completo" required="" autofocus="">
+      <h1 class="h3 mb-3 font-weight-normal">Iniciar sesión</h1>
       <label for="email" class="sr-only">Email address</label>
       <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required="">
       <label for="password" class="sr-only">Password</label>
@@ -20,8 +13,7 @@
           <input type="checkbox" value="remember-me"> Remember me
         </label>
       </div>
-      <button class=" btn btn-lg btn-primary btn-block " type="submit">Sign in</button>
+      <button class=" btn btn-lg btn-primary btn-block " type="submit">Iniciar sesión</button>
       <p class="mt-5 mb-3 text-muted">E-clothes© 2020</p>
     </form>
 </div>
-
