Implementacion de partials

--- a/views/registrarse.hbs
+++ b/views/registrarse.hbs
@@ -6,6 +6,8 @@
 {{!-- Formulario de registro --}}
 
 <div class="container text-center d-flex justify-content-center">
+  {{!-- Mensajes para el usuario --}}
+  {{>messages}}
     <form method="post" action="/registrarse" class="form form-signin align-middle">
       <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> {{!-- cambiar URL del logo en src --}}
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
