--- a/views/iniciarSesion.hbs
+++ b/views/iniciarSesion.hbs
@@ -14,6 +14,12 @@
         </label>
       </div>
       <button class=" btn btn-lg btn-primary btn-block " type="submit">Iniciar sesión</button>
+      <br>
+      <br>
+      <a href="/olvide-password">¿OLVIDASTE LA CONTRASEÑA?</a>
+
       <p class="mt-5 mb-3 text-muted">E-clothes© 2020</p>
+
+
     </form>
 </div>
