--- a/views/iniciarSesion.hbs
+++ b/views/iniciarSesion.hbs
@@ -16,6 +16,11 @@
       <button class=" btn btn-lg btn-primary btn-block " type="submit">Iniciar sesión</button>
       <br>
       <br>
+      <a>Si no tienes cuenta</a>
+      <br>
+      <a href="/crear-cuenta">Crear Cuenta</a>
+      <br>
+      <br>
       <a href="/olvide-password">¿OLVIDASTE LA CONTRASEÑA?</a>
 
       <p class="mt-5 mb-3 text-muted">E-clothes© 2020</p>
