Vista de búsqueda

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,7 +15,7 @@
   <script src="https://kit.fontawesome.com/d7bc68b35c.js" crossorigin="anonymous"></script>
   {{!-- Estilo personalizado --}}
   <link href="/css/custom-styles.min.css?v=2.3.1" rel="stylesheet">
-  <title>Cashize marketplace</title>
+  <title>E-Clothes</title>
 </head>
 
 <body class="search-page sidebar-collapse">
