--- a/views/restablecerPassword.hbs
+++ b/views/restablecerPassword.hbs
@@ -1,21 +1,18 @@
 {{!-- Formulario de Restablecer contraseña --}}
 <div class="container text-center d-flex justify-content-center">
-<form method="post" action="/olvide-password" class="form form-signin align-middle">
-      <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> {{!-- cambiar URL del logo en src --}}
-      <h1 class="h3 mb-3 font-weight-normal">Restablece tu contraseña</h1>
-      <label for="email" class="sr-only">Email address</label>
-      <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required="">
-      
-      <div class="checkbox mb-3">
-        
-      </div>
-      <button class=" btn btn-lg btn-primary btn-block " type="submit">Restablecer</button>
-      <br>
-      <br>
-      
-
-      <p class="mt-5 mb-3 text-muted">E-clothes© 2020</p>
-
-
-    </form>
+<form class="form-register" method="post" action="/olvide-password" >
+    <h4>Restablece tu contraseña</h4>
+    <label for="email" class="sr-only">Correo electrónico</label>
+    <input class="controls" type="email" id="inputEmail" name="email"  placeholder="Correo electrónico" required="">
+    
+   
+    
+    <button class="botons" type="submit">Restablecer</button>
+    <br>
+    <br>
+     <p class="mt-5 mb-3 text-muted">E-clothes© 2020</p>
+  </form>
     </div>
+
+
+    
