--- a/views/buscar.hbs
+++ b/views/buscar.hbs
@@ -1,3 +1,7 @@
+<br>
+<br>
+<br>
+<br>
 <div class="wrapper">
   <div class="main">
     <div class="section section-white section-search">
@@ -22,3 +26,34 @@
     </div>
   </div>
 </div> 
+
+<div class="container">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-60" src="https://www.baring.com.ar/resources/original/tienda-de-ropa-ley-de-talles-rosario.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-60" src="https://www.esciupfnews.com/wp-content/uploads/2020/02/ropa.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-60" src="https://media.theobjective.com/2019/11/que-hacer-con-la-gran-cantidad-de-ropa-que-compramos-pero-no-usamos.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+</div>
+
