--- a/views/iniciarSesion.hbs
+++ b/views/iniciarSesion.hbs
@@ -1,30 +1,22 @@
 {{!-- Formulario de Inicio de Sesion --}}
 
 <div class="container text-center d-flex justify-content-center">
-    <form method="post" action="/iniciar-sesion" class="form form-signin align-middle">
-      <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> {{!-- cambiar URL del logo en src --}}
-      <h1 class="h3 mb-3 font-weight-normal">Iniciar sesión</h1>
-      <label for="email" class="sr-only">Email address</label>
-      <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required="">
-      <label for="password" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required="">
-      <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-      </div>
-      <button class=" btn btn-lg btn-primary btn-block " type="submit">Iniciar sesión</button>
-      <br>
-      <br>
-      <a>Si no tienes cuenta</a>
-      <br>
-      <a href="/crear-cuenta">Crear Cuenta</a>
-      <br>
-      <br>
-      <a href="/olvide-password">¿OLVIDASTE LA CONTRASEÑA?</a>
-
-      <p class="mt-5 mb-3 text-muted">E-clothes© 2020</p>
-
-
-    </form>
+    <form class="form-register" method="post" action="/iniciar-sesion" >
+    <h4>Iniciar sesion</h4>
+    <label for="email" class="sr-only">Correo electrónico </label>
+    <input class="controls" type="email" id="inputEmail" name="email"  placeholder="Email address" required="">
+    <label for="password" class="sr-only">Contraseña</label>
+    <input class="controls" type="password" id="inputPassword" name="password" placeholder="Password" required="">
+   
+ 
+     <button class="botons" type="submit">Iniciar sesión</button>
+    <p><a href="/crear-cuenta">¿Si no tienes Cuenta? créala aquí</a></p>
+    <br>
+    <br>
+    <a href="/olvide-password">¿OLVIDASTE LA CONTRASEÑA?</a>
+  </form>
 </div>
+
+
+
+
