--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,17 +15,20 @@
   <script src="https://kit.fontawesome.com/d7bc68b35c.js" crossorigin="anonymous"></script>
   {{!-- Estilo personalizado --}}
   <link href="/css/custom-styles.min.css?v=2.3.1" rel="stylesheet">
-  <title>E-Clothes</title>
+  <title>Cashize marketplace</title>
 </head>
 
 <body class="search-page sidebar-collapse">
   {{!-- Navbar --}}
-  <nav class="navbar navbar-expand-lg fixed-top bg-danger nav-down" color-on-scroll="500">
+  <nav class="navbar navbar-expand-lg fixed-top bg-warning nav-down" color-on-scroll="500">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="/" rel="tooltip" title="E-Clothes" data-placement="bottom">
-          E-Clothes
+       
+<a class="navbar-brand" href="/" rel="tooltip" title="E-clothes" data-placement="bottom" style="color: white;">
+        <img src="/img/logo.png" width="50" height="50" class="d-inline-block align-top" alt="" >
+          e-clothes
         </a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar bar1"></span>
@@ -39,21 +42,20 @@
             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">
               Administración </a>
             <div class="dropdown-menu dropdown-menu-right dropdown-danger">
-              <a href="../index.html" class="dropdown-item">
+              <a href="/" class="dropdown-item">
                 Tu perfil
               </a>
-              <a href="../presentation.html" class="dropdown-item">
+              <a href="/crear-producto" class="dropdown-item">
                 Crear producto
               </a>
-              <a href="https://demos.creative-tim.com/paper-kit-2-pro/docs/1.0/getting-started/introduction.html"
-                class="dropdown-item">
+              <a href="/" class="dropdown-item">
                 Ver productos
               </a>
             </div>
           </li>
           {{!-- Iniciar o cerrar sesión --}}
           <li class="nav-item">
-            <a class="btn btn-round btn-danger" href="/iniciar-sesion">
+            <a class="btn btn-round btn-dark" href="/iniciar-sesion">
               <i class="fas fa-sign-in-alt"></i> Iniciar sesión
             </a>
           </li>
@@ -64,6 +66,7 @@
 
   {{!-- Contenido principal --}}
   {{{body}}}
+  
 
   {{!-- Scripts requeridos por Bootstrap --}}
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -75,6 +78,10 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
+  {{!-- for Jasny fileupload  --}}
+  <script src="/js/jasny-bootstrap.min.js"></script>
+  {{!-- Bootstrap tag input --}}
+  <script src="/js/bootstrap-tagsinput.js"></script>
 </body>
 
-</html> 
+</html>
