--- a/views/nuevoPassword.hbs
+++ b/views/nuevoPassword.hbs
@@ -1,27 +1,15 @@
-<div class="wrapper">
-  <div class="page-header" style="">
-    <div class="filter"></div>
-    <div class="container">
-      {{!-- Mensajes para el usuario --}}
-      {{> messages messages}}
-      <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-6 ml-auto mr-auto">
-          <div class="card card-register">
-            <h3 class="card-title" style="font-weight: bold;">Ingresa tu nueva contraseña</h3>
-            <p class="card-text text-center mt-5">Has solicitado el cambio de tu contraseña anterior. Ingresa una nueva
-              para continuar utilizando E-clothes
-            </p>
-            {{!-- Formulario de restablecer --}}
-            <form class="register-form" method="POST">
-              <input type="password" class="form-control" placeholder="Contraseña" name="password" required>
-              <button class="btn btn-block btn-round">Cambiar</button>
-            </form>
-          </div>
-        </div>
-      </div>
-      <div class="demo-footer text-center">
-        <h6>&copy; {{year}}, UNICAH <i class="fa fa-heart heart"></i> E-clothes© 2020</h6>
-      </div>
-    </div>
-  </div>
-</div>
+<form class="form-register" method="POST">
+    <h4>Ingresa tu nueva contraseña</h4>
+
+            <p>Has solicitado el cambio de tu contraseña anterior. Ingresa una nueva</p>
+            <br>
+            <br>
+    <input class="controls" type="password"  placeholder="Contraseña" name="password" required>
+    
+    
+    
+    <button class="botons">Cambiar</button>
+
+
+    <p>E-clothes© 2020</p> 
+  </form>
