--- a/views/registrarse.hbs
+++ b/views/registrarse.hbs
@@ -13,7 +13,7 @@
 
       <div class="loging-container">
 
-        {{>messages messages}}
+        {{>showMessages messages}}
 
         <form method="post" action="/registrarse" class="form-register">
           <h4>REGÍSTRATE</h4>
