--- a/views/buscar.hbs
+++ b/views/buscar.hbs
@@ -17,43 +17,58 @@
               </div>
             </form>
             <h6 class="text-muted">¿Es esto lo que búscas?</h6>
-            <div class="text-missing">
-              <h5 class="text-muted">¿Encontraste lo que buscabas? Prueba con otros términos para buscar</h5>
+
+            <div class="row add-row ">
+              {{#each productos as |producto|}}
+              <div class="col-md-4 col-sm-4">
+                <h5>{{producto.nombre}}</h5>
+                <p class="price"><strong>L {{producto.precio}}</strong></p>
+                <p>{{producto.descripcion}}</p>
+                {{!-- <div class="col-md-3 ml-auto col-sm-4"> --}}
+                <img src="uploads/products/{{imagen}}" class="img-responsive" style="max-width: 225px; max-height: 180px;" />
+                {{!-- </div> --}}
+                <a href="/producto/{{producto.url}}" class="btn btn-secondary btn-round">Ver más</a>
+              </div>
+              {{/each}}
             </div>
+
           </div>
         </div>
       </div>
     </div>
   </div>
-</div> 
+</div>
 
 <div class="container">
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-60" src="https://www.baring.com.ar/resources/original/tienda-de-ropa-ley-de-talles-rosario.jpg" alt="First slide">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-60"
+          src="https://www.baring.com.ar/resources/original/tienda-de-ropa-ley-de-talles-rosario.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-60" src="https://www.esciupfnews.com/wp-content/uploads/2020/02/ropa.jpg"
+          alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-60"
+          src="https://media.theobjective.com/2019/11/que-hacer-con-la-gran-cantidad-de-ropa-que-compramos-pero-no-usamos.jpg"
+          alt="Third slide">
+      </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-60" src="https://www.esciupfnews.com/wp-content/uploads/2020/02/ropa.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-60" src="https://media.theobjective.com/2019/11/que-hacer-con-la-gran-cantidad-de-ropa-que-compramos-pero-no-usamos.jpg" alt="Third slide">
-    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
 </div>
-
