Configuracion para el carrito de compras

--- a/views/iniciarSesion.hbs
+++ b/views/iniciarSesion.hbs
@@ -1,6 +1,13 @@
 {{!-- Formulario de Inicio de Sesion --}}
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+{{>showMessages messages}}
 <div class="container text-center d-flex justify-content-center">
+  
     <form class="form-register" method="post" action="/iniciar-sesion" >
     <h4>Iniciar sesion</h4>
     <label for="email" class="sr-only">Correo electrónico </label>
