--- a/views/buscar.hbs
+++ b/views/buscar.hbs
@@ -25,7 +25,7 @@
                 <p class="price"><strong>L {{producto.precio}}</strong></p>
                 <p>{{producto.descripcion}}</p>
                 {{!-- <div class="col-md-3 ml-auto col-sm-4"> --}}
-                <img src="uploads/products/{{imagen}}" class="img-responsive" style="max-width: 225px; max-height: 180px;" />
+                <img src="uploads/products/{{pictures.[0]}}" class="img-responsive" style="max-width: 225px; max-height: 180px;" />
                 {{!-- </div> --}}
                 <a href="/producto/{{producto.url}}" class="btn btn-secondary btn-round">Ver más</a>
               </div>
