--- a/views/crearProducto.hbs
+++ b/views/crearProducto.hbs
@@ -22,7 +22,7 @@
                   style="max-width: 370px; max-height: 250px;"></div>
                 <div>
                   <span class="btn btn-outline-default btn-round btn-file"><span class="fileinput-new">Selecciona una
-                      imagen</span><span class="fileinput-exists">Cambiar</span><input type="file" name="imagen" id="imagen"></span>
+                      imagen</span><span class="fileinput-exists">Cambiar</span><input type="file" name="imagen" id="imagen" multiple></span>
                   <a href="#paper-kit" class="btn btn-link btn-danger fileinput-exists" data-dismiss="fileinput"><i
                       class="fa fa-times"></i> Quitar</a>
                 </div>
