--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,9 +23,9 @@
   <nav class="navbar navbar-expand-lg fixed-top bg-warning nav-down" color-on-scroll="500">
     <div class="container">
       <div class="navbar-translate">
-       
-<a class="navbar-brand" href="/" rel="tooltip" title="E-clothes" data-placement="bottom" style="color: white;">
-        <img src="/img/logo.png" width="50" height="50" class="d-inline-block align-top" alt="" >
+
+        <a class="navbar-brand" href="/" rel="tooltip" title="E-clothes" data-placement="bottom" style="color: white;">
+          <img src="/img/logo.png" width="50" height="50" class="d-inline-block align-top" alt="">
           e-clothes
         </a>
 
@@ -38,26 +38,40 @@
       </div>
       <div class="collapse navbar-collapse" data-nav-image="../assets/img/blurred-image-1.jpg" data-color="orange">
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="btn btn-round btn-transparent" href="/carrito">
+              <i class="fas fa-shopping-cart"></i> Carrito de compras
+              <span class="badge badge-dark">{{session.carrito.cantidadTotal}}</span>
+            </a>
+          </li>
           <li class="dropdown nav-item">
             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">
               Administración </a>
-            <div class="dropdown-menu dropdown-menu-right dropdown-danger">
-              <a href="/" class="dropdown-item">
-                Tu perfil
-              </a>
+            <div class="dropdown-menu">
               <a href="/crear-producto" class="dropdown-item">
                 Crear producto
               </a>
+              <div class="dropdown-divider"></div>
               <a href="/" class="dropdown-item">
                 Ver productos
               </a>
             </div>
           </li>
           {{!-- Iniciar o cerrar sesión --}}
-          <li class="nav-item">
-            <a class="btn btn-round btn-dark" href="/iniciar-sesion">
-              <i class="fas fa-sign-in-alt"></i> Iniciar sesión
-            </a>
+          <li class="dropdown nav-item">
+            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">
+              Cuenta </a>
+            <div class="dropdown-menu">
+              {{#if login}} 
+                <a href="/perfil" class="dropdown-item"> Tu perfil</a>
+                <div class="dropdown-divider"></div>
+                <a href="/cerrar-sesion" class="dropdown-item">Cerrar sesión</a>
+              {{else}}  
+                <a href="/crear-cuenta" class="dropdown-item">Regístrarse</a>
+                <div class="dropdown-divider"></div>
+                <a href="/iniciar-sesion" class="dropdown-item">Iniciar sesión</a>
+              {{/if}}        
+            </div>
           </li>
         </ul>
       </div>
@@ -66,7 +80,7 @@
 
   {{!-- Contenido principal --}}
   {{{body}}}
-  
+
 
   {{!-- Scripts requeridos por Bootstrap --}}
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
