--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -44,6 +44,7 @@
               <span class="badge badge-dark">{{session.carrito.cantidadTotal}}</span>
             </a>
           </li>
+          {{#if role}}
           <li class="dropdown nav-item">
             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">
               Administración </a>
@@ -57,6 +58,7 @@
               </a>
             </div>
           </li>
+          {{/if}}
           {{!-- Iniciar o cerrar sesión --}}
           <li class="dropdown nav-item">
             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">
