Actualizacion de atricutos de los modelos de producto y usuario

--- a/views/carrito.hbs
+++ b/views/carrito.hbs
@@ -12,6 +12,7 @@
                 <li class="list-group-item">
                     <span class="badge badge-dark">{{qty}}</span>
                     <strong>{{item.nombre}}</strong>
+                    <strong>{{item.talla}}</strong>
                     <span class="label label-success">L. {{item.precio}}</span>
                     <div class="btn-group">
                         <button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown">Acción <span
