--- a/views/crearProducto.hbs
+++ b/views/crearProducto.hbs
@@ -27,38 +27,33 @@
                       class="fa fa-times"></i> Quitar</a>
                 </div>
               </div>
-              <h6>Etiquetas</h6>
-              <div id="tags">
-                <input class="tagsinput" data-color="success" type="text" data-role="tagsinput"
-                  placeholder="etiquetas separadas por coma" />
-                {{!-- <div class="tagsinput-add"></div> --}}
-                <!-- You can change "tag-primary" with with "tag-info", "tag-success", "tag-warning","tag-danger" -->
-              </div>
-              <h6>Estado <span class="icon-danger">*</span></h6>
+             
+           {{!--   <h6>Talla <span class="icon-danger">*</span></h6>
               <div class="form-check-radio">
                 <label class="form-check-label">
-                  <input class="form-check-input" type="radio" name="estado" id="estadoNuevo" value="nuevo" >
-                  Nuevo
+                  <input class="form-check-input" type="radio" name="talla" id="tallaS" value="S" >
+                  S
                   <span class="form-check-sign"></span>
                 </label>
               </div>
               <div class="form-check-radio">
                 <label class="form-check-label">
-                  <input class="form-check-input" type="radio" name="estado" id="estadoUsado" value="usado">
-                  Usado
+                  <input class="form-check-input" type="radio" name="talla" id="tallaM" value="M">
+                  M
                   <span class="form-check-sign"></span>
                 </label>
               </div>
-            </div>
+            </div> --}}
+
             <div class="col-md-7 col-sm-7">
               <div class="form-group">
                 <h6>Nombre <span class="icon-danger">*</span></h6>
-                <input type="text" class="form-control border-input" placeholder="iPhone 12 Pro Max" name="nombre">
+                <input type="text" class="form-control border-input" placeholder="Camisa básica superslim" name="nombre">
               </div>
               <div class="form-group">
                 <h6>Precio <span class="icon-danger">*</span></h6>
                 <div class="input-group border-input">
-                  <input type="text" value="" placeholder="40000" class="form-control border-input" name="precio">
+                  <input type="text" value="" placeholder="900" class="form-control border-input" name="precio">
                   <div class="input-group-append">
                     <span class="input-group-text"><i class="fas fa-money-bill-alt"></i></span>
                   </div>
@@ -66,7 +61,7 @@
               </div>
               <div class="form-group">
                 <h6>Descripción <span class="icon-danger">*</span< /h6>
-                    <textarea class="form-control textarea-limited" placeholder="128GB, gold..." rows="13"
+                    <textarea class="form-control textarea-limited" placeholder="Camisa elástica superslim con cuello solapa y manga larga..." rows="13"
                       maxlength="250" name="descripcion"></textarea>
                     <h5><small><span id="textarea-limited-message" class="pull-right">250 caracteres
                           máximo</span></small>
