--- a/views/mostrarProducto.hbs
+++ b/views/mostrarProducto.hbs
@@ -32,6 +32,32 @@
           <p>{{producto.descripcion}}</p>
           <h6>Vendedor: {{producto.vendedor.nombre}}</h6>
           <hr />
+
+        <h6>Talla:  <span class="icon-danger">*</span></h6>
+              <div class="form-check-radio">
+                <label class="form-check-label">
+                  <input class="form-check-input" type="radio" name="talla" id="tallaS" value="{{producto.talla}}" >
+                  S
+                  <span class="form-check-sign"></span>
+                </label>
+              </div>
+              <div class="form-check-radio">
+                <label class="form-check-label">
+                  <input class="form-check-input" type="radio" name="talla" id="tallaM" value="{{producto.talla}}">
+                  M
+                  <span class="form-check-sign"></span>
+                </label>
+              </div>
+            </div>
+            <div class="form-check-radio">
+                <label class="form-check-label">
+                  <input class="form-check-input" type="radio" name="talla" id="tallaL" value="{{producto.talla}}" >
+                  L
+                  <span class="form-check-sign"></span>
+                </label>
+              </div>
+
+
           <div class="row">
             <div class="col-md-7 offset-md-5 col-sm-8">
               <a href="/carrito/{{producto._id}}" class="btn btn-danger-btn-block-btn-round">Agregar al carrito</a>
