--- a/views/perfil.hbs
+++ b/views/perfil.hbs
@@ -1,5 +1,26 @@
-<br>
-<br>
-<br>
-<br>
-<br><h1>Mi perfil</h1>
+<div class="textoperfil">
+          
+
+            <h1>DATOS PERSONALES</h1>
+
+            
+</div>
+            <div class="perfil">
+              
+             
+                <h5>Nombre: {{usuarios}}</h5>
+                <h5>Correo: {{email}}</h5>
+                 <h5>Telefono: {{telefono}}</h5>
+                <h5>Ciudad: {{ciudad}}</h5>
+                <h5>Direccion: {{direccion}}</h5>
+               
+               
+             
+            </div>
+
+            <div>
+                <a href="/misCompras">MIS COMPRAS</a>
+            </div>
+
+        
+
