--- a/views/restablecerPassword.hbs
+++ b/views/restablecerPassword.hbs
@@ -1,18 +1,38 @@
 {{!-- Formulario de Restablecer contraseña --}}
-<div class="container text-center d-flex justify-content-center">
-<form class="form-register" method="post" action="/olvide-password" >
-    <h4>Restablece tu contraseña</h4>
-    <label for="email" class="sr-only">Correo electrónico</label>
-    <input class="controls" type="email" id="inputEmail" name="email"  placeholder="Correo electrónico" required="">
-    
-   
-    
-    <button class="botons" type="submit">Restablecer</button>
-    <br>
-    <br>
-     <p class="mt-5 mb-3 text-muted">E-clothes© 2020</p>
-  </form>
+
+
+    <div class="container-login100"
+  style="background-image: url('https://media.istockphoto.com/photos/two-cheerful-girls-shopping-for-clothes-picture-id670741276?k=6&m=670741276&s=170667a&w=0&h=uG-t6x5vlzS20EtPe7hbY1284zT_6HK1u_pHxY0hhQQ=');">
+
+  <div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
+
+    <div class="errores" id="errores">
+      {{>showMessages messages}}
     </div>
 
+    <form class="login100-form validate-form" method="post" action="/olvide-password">
+      <span class="login100-form-title p-b-37">
+       Restablece tu contraseña
+      </span>
+
+      <div class="wrap-input100 validate-input m-b-20" data-validate="Enter username or email">
+        <input class="input100" type="email" id="inputEmail" name="email"  placeholder="Correo electrónico" required="">
+        <span class="focus-input100"></span>
+      </div>
 
     
+
+      <div class="container-login100-form-btn">
+        <button class="login100-form-btn" type="submit">
+          Restablecer
+        </button>
+      </div>
+
+     <p class="mt-5 mb-3 text-muted">E-clothes© 2020</p>
+
+    </form>
+
+  </div>
+
+
+</div>
