--- a/views/misCompras.hbs
+++ b/views/misCompras.hbs
@@ -11,13 +11,21 @@
   
   
          <div class="row add-row ">
-             
+             {{#each ordenes as |orden| }}
               <div class="col-md-4 col-sm-4">
-                <h5>Name:   {{ordenes.name}}</h5>
-                <h5>Email:  {{ordenes.email}}</h5>
-                <h5>Precio Total:   {{ordenes.cart.precioTotal}} HNL</h5>
-               </div>
+                <h5>Name:   {{orden.name}}</h5>
+                <h5>Email:  {{orden.email}}</h5>
+                
+
             
+            
+                    <h5> productos: {{orden.products.nombre}}</h5>
+
+
+
+               </div>
+               <h5>Precio Total: {{orden.cart.precioTotal}} HNL</h5>
+            {{/each}}
             </div>
 
 
