--- a/views/buscar.hbs
+++ b/views/buscar.hbs
@@ -12,6 +12,10 @@
               <div class="input-group no-border">
                 <span class="input-group-addon addon-xtreme no-border" id="basic-addon1"><i
                     class="fa fa-search"></i></span>
+
+
+          <a href="/mostrarProductoCategoria">Calsoneta</a>
+
                 <input type="text" class="form-control input-xtreme no-border" placeholder="Buscar..."
                   aria-describedby="basic-addon1">
               </div>
