--- a/views/crearProducto.hbs
+++ b/views/crearProducto.hbs
@@ -67,7 +67,13 @@
                           máximo</span></small>
                     </h5>
               </div>
-            </div>
+               
+                <div class="form-group">
+                <h6>Categoria <span class="icon-danger">*</span></h6>
+                <input type="text" class="form-control border-input" placeholder="Ingrese categoria de la prenda" name="categoria">
+              </div>
+
+
           </div>
           <div class="row buttons-row">
             <div class="col-md-4 col-sm-4">
