--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -56,6 +56,10 @@
               <a href="/" class="dropdown-item">
                 Ver productos
               </a>
+              <div class="dropdown-divider"></div>
+              <a href="/productos-usuario" class="dropdown-item">
+                Eliminar productos
+              </a>
             </div>
           </li>
           {{/if}}
@@ -98,6 +102,8 @@
   <script src="/js/jasny-bootstrap.min.js"></script>
   {{!-- Bootstrap tag input --}}
   <script src="/js/bootstrap-tagsinput.js"></script>
+  {{!-- Webpack bundle --}}
+  <script src="/dist/bundle.js"></script>
 </body>
 
 </html>
